// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EForm > EForm snapshot 1`] = `
"<form class=\\"eu-form\\">
  <!---->
</form>"
`;

exports[`eForm > eForm snapshot 1`] = `
"<form class="eu-form">
  <!---->
</form>"
`;
